[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-buddy-mcp"
version = "0.1.0"
description = "A powerful literature review MCP server for AI agents, powered by Semantic Scholar."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Usama" },
]
keywords = ["mcp", "semantic-scholar", "literature-review", "research", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastmcp",
    "requests",
    "pypdf",
    "python-dotenv",
    "httpx",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/Usama1002/research-buddy-mcp"
Repository = "https://github.com/Usama1002/research-buddy-mcp"
Issues = "https://github.com/Usama1002/research-buddy-mcp/issues"

[project.scripts]
research-buddy-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

